--- a/index.html
+++ b/index.html
@@ -17,14 +17,34 @@
           </ul>
         </nav>
        </header>
-    <div>
+    <div class="main">
 <h1>High Exposure Guiding</h1>
 <p>climbing guide New Jersey, New York, Pennsylvania</p>
 <input type="button" class="schedule" value="SCHEDULE" />
-<img class="header-img" src="./pictures/seneca.jpg">
-
-
+<img class="header-img" src="./pictures/trad.jpg">
     </div>
+
+   <div class="pics">
+<h2>Climbing Pictures</h2>
+<div>
+    <img class="header-img" src="./pictures/multitr.jpg">
+    <p>Intro to Climbing Outside</p>
+</div>
+<div>
+    <img class="header-img" src="./pictures/sport.jpg">
+    <p>Intro to Sport Climbing</p>
+</div>
+<div>
+    <img class="header-img" src="./pictures/seneca.jpg">
+    <p>MultiPitch Trad Climbing</p>
+</div>
+<div>
+    <img class="header-img" src="./pictures/anchors.jpg">
+    <p>Anchor Building Clinic</p>
+</div>
+
+
+   </div> 
 
 
 
