added contact and footer sections

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main">
 <h1>High Exposure Guiding</h1>
 <p>climbing guide New Jersey, New York, Pennsylvania</p>
-<input type="button" class="schedule" value="SCHEDULE" />
+<input type="button" class="sign_up" value="Sign Up" />
 <img class="header-img" src="./pictures/trad.jpg">
     </div>
 
@@ -42,10 +42,24 @@
     <img class="header-img" src="./pictures/anchors.jpg">
     <p>Anchor Building Clinic</p>
 </div>
-
-
    </div> 
 
+   <div class="quote">
+    <p>“Better we raise our skill than lower the climb.”</p>
+
+       <p>--Royal Robbins</p>
+
+   </div>
+   <div class="sign_up">
+<div>
+    <p>Sign up for a trip today.</p>
+    <input type="button" class="sign_up" value="Sign Up" />
+</div>
+
+   </div>
+<footer>
+    <p>Copyright © The Odin Project 2021</p>
+</footer>
 
 
 </body>
