--- a/index.html
+++ b/index.html
@@ -19,28 +19,33 @@
         </nav>
        </header>
     <div class="main">
+        <div class="main-flex">
+        <div>
 <h1>High Exposure Guiding</h1>
 <p>climbing guide New Jersey, New York, Pennsylvania</p>
 <input type="button" class="sign_up" value="Sign Up" />
-<img class="header-img" src="./pictures/trad.jpg">
+</div>
+<div>
+<img class="main-img" src="./pictures/trad.jpg">
+</div>
     </div>
-
+</div>
    <div class="pics">
 <h2>Climbing Pictures</h2>
 <div>
-    <img class="header-img" src="./pictures/multitr.jpg">
+    <img class="pics-img" src="./pictures/multitr.jpg">
     <p>Intro to Climbing Outside</p>
 </div>
 <div>
-    <img class="header-img" src="./pictures/sport.jpg">
+    <img class="pics-img" src="./pictures/sport.jpg">
     <p>Intro to Sport Climbing</p>
 </div>
 <div>
-    <img class="header-img" src="./pictures/seneca.jpg">
+    <img class="pics-img" src="./pictures/seneca.jpg">
     <p>MultiPitch Trad Climbing</p>
 </div>
 <div>
-    <img class="header-img" src="./pictures/anchors.jpg">
+    <img class="pics-img" src="./pictures/anchors.jpg">
     <p>Anchor Building Clinic</p>
 </div>
    </div> 
