changed pics format

--- a/index.html
+++ b/index.html
@@ -32,24 +32,25 @@
 </div>
    <div class="pics">
 <h2>Climbing Pictures</h2>
-<div>
+<div class="flex-pics">
+<div class="picchild">
     <img class="pics-img" src="./pictures/multitr.jpg">
     <p>Intro to Climbing Outside</p>
 </div>
-<div>
+<div class="picchild">
     <img class="pics-img" src="./pictures/sport.jpg">
     <p>Intro to Sport Climbing</p>
 </div>
-<div>
+<div class="picchild">
     <img class="pics-img" src="./pictures/seneca.jpg">
     <p>MultiPitch Trad Climbing</p>
 </div>
-<div>
+<div class="picchild">
     <img class="pics-img" src="./pictures/anchors.jpg">
     <p>Anchor Building Clinic</p>
 </div>
    </div> 
-
+</div>
    <div class="quote">
     <p>“Better we raise our skill than lower the climb.”</p>
 
