changed quotes appearance

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
    </div> 
 </div>
    <div class="quote">
-    <p>“Better we raise our skill than lower the climb.”</p>
+    <div>
+    <p class="quotetext">“Better we raise our skill than lower the climb.”</p>
 
-       <p>--Royal Robbins</p>
-
+       <p class="quoter">--Royal Robbins</p>
+</div>
    </div>
    <div class="sign_up">
 <div>
