--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 </div>
     </div>
 </div>
+
+
    <div class="pics">
 <h2>Climbing Pictures</h2>
 <div class="flex-pics">
@@ -51,6 +53,8 @@
 </div>
    </div> 
 </div>
+
+
    <div class="quote">
     <div>
     <p class="quotetext">“Better we raise our skill than lower the climb.”</p>
@@ -58,9 +62,14 @@
        <p class="quoter">--Royal Robbins</p>
 </div>
    </div>
-   <div class="sign_up">
-<div>
+
+
+   <div class="signupclass">
+    
+<div class="signup_i signup_input">
     <p>Sign up for a trip today.</p>
+</div>
+<div class="signup_i signup_input">  
     <input type="button" class="sign_up" value="Sign Up" />
 </div>
 
