--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="main-flex">
         <div>
 <h1>High Exposure Guiding</h1>
-<p>climbing guide New Jersey, New York, Pennsylvania</p>
+<h3>climbing guide New Jersey, New York, Pennsylvania</h3>
 <input type="button" class="sign_up" value="Sign Up" />
 </div>
 <div>
