--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="main-flex">
         <div>
 <h1>High Exposure Guiding</h1>
-<h3>climbing guide New Jersey, New York, Pennsylvania</h3>
+<h3>Climbing guide New Jersey, New York, Pennsylvania</h3>
 <input type="button" class="sign_up" value="Sign Up" />
 </div>
 <div>
@@ -66,7 +66,7 @@
 
    <div class="signupclass">
     
-<div class="signup_i signup_input">
+<div class="signup_i signup_t">
     <p>Sign up for a trip today.</p>
 </div>
 <div class="signup_i signup_input">  
